Item_Recommendation.ipynb

--- a/Item_Recommendation.ipynb
+++ b/Item_Recommendation.ipynb
@@ -365,7 +365,7 @@
    "source": [
     "# def cofi_cost_func(X, W, b, Y, R, lambda_):\n",
     "#     \"\"\"\n",
-    "#     Returns the cost for the content-based filtering\n",
+    "#     Returns the cost for the collaborative-based filtering\n",
     "#     Args:\n",
     "#       X (ndarray (num_movies,num_features)): matrix of item features\n",
     "#       W (ndarray (num_users,num_features)) : matrix of user parameters\n",
